# VEngine-2.0

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/models/sponza/: sponza.mtl
assets/shaders/: fragment_point_light.frag  fragment_shader.frag  vertex_point_light.vert  vertex_shader.vert
cmake/config/: Version.hpp.in
cmake/modules/: ClangFormat.cmake  MakeDoc.cmake  MakeShaders.cmake  MakeTests.cmake  PathsAndOptions.cmake
documentation/: .gitignore
documentation/.doxygen/: Doxyfile  header.html
include/VEngine/: Device.hpp  Engine.hpp  HelloTriangleApplication.hpp  Image.hpp  Model.hpp  Shaders.hpp  SwapChain.hpp  Vertex.hpp  Window.hpp
include/VEngine/Core/: Device.hpp  Engine.hpp  EventManager.hpp  Window.hpp
include/VEngine/GFX/: Gui.hpp  Renderer.hpp  Shaders.hpp  SwapChain.hpp
include/VEngine/Gfx/: Gui.hpp  Model.hpp  Renderer.hpp  Shaders.hpp  SwapChain.hpp  Texture.hpp
include/VEngine/Gfx/Backend/: Device.hpp  Renderer.hpp  SwapChain.hpp
include/VEngine/Gfx/Resources/: Mesh.hpp  Model.hpp  Texture.hpp  TextureManager.hpp  Transform.hpp  Vertex.hpp
include/VEngine/Gui/: Gui.hpp
include/VEngine/Scene/: Camera.hpp
modules/: CMakeLists.txt
modules/Utils/: CMakeLists.txt
modules/Utils/include/Utils/: Clock.hpp  ErrorHandling.hpp  FrameStats.hpp  Image.hpp  Logger.hpp  MemoryMonitor.hpp  Read.hpp  Utils.hpp
modules/Utils/src/: clock.cpp  errorHandling.cpp  frameStats.cpp  image.cpp  logger.cpp  memoryMonitor.cpp  read.cpp  utils.cpp
src/: device.cpp  engine.cpp  image.cpp  main.cpp  model.cpp  shaders.cpp  swapChain.cpp  window.cpp
src/Core/: device.cpp  engine.cpp  eventManager.cpp  window.cpp
src/GFX/: gui.cpp  model.cpp  renderer.cpp  shaders.cpp  swapChain.cpp
src/GFX/GUI/: gui.cpp
src/Gfx/: gui.cpp  model.cpp  renderer.cpp  shaders.cpp  swapChain.cpp  texture.cpp
src/Gfx/Backend/: device.cpp  renderer.cpp  shaders.cpp  swapChain.cpp
src/Gfx/Gui/: gui.cpp  render.cpp  style.cpp
src/Gfx/Resources/: model.cpp  texture.cpp  textureManager.cpp
src/Gui/: gui.cpp  render.cpp  style.cpp
src/Scene/: camera.cpp
tests/src/: test.cpp
tools/: build.sh  clean.sh  install-dependencies.sh  run-doc.sh
(+6 files in other folders)
